# 2022-tests-examples

./: Large Native Tests.yaml  README.md  test_canonize_url.py
analytics/: test.yql  (+2 more)
classfields/test_utils/: BUILD.bazel  SpecBase.scala
classfields/test_utils/src/: KafkaSpecBase.scala  MockitoUtil.scala  SpecBase.scala
classfields/test_utils/ydb/: YdbWrapperContainer.scala
classfields/testcontainers/zookeeper/: BUILD.bazel
mobile/test_app/darwin/: .gitignore  CMakeLists.txt  settings.gradle
mobile/tests/: .swiftlint (2).yml  AlgorithmTests.swift  AnyActionDecoderImplTests.swift  ApplyFilterRuleTest-testDeletingRule.request.json  ApplyFilterRuleTest.swift  Array+AdditionsTests.swift  ArrayDiffTests.swift  AutoRuleManagerTest.swift  BarPresenterTests.swift  BinaryInteger+AdditionsTests.swift  CLLocation+YXTMockLocationTests.m  CMakeLists.txt  CalendarBundleStorageTests.swift  CalendarBundleUpdaterTest.swift  CalendarExtensionsTests.swift  CalendarWKURLSchemeHandlerTest.swift  CancelAfterTest.swift  CartCashbackTextTests.swift  ChangeRuleAbilityTest-testDisablingRule.request.json  ChangeRuleAbilityTest-testEnablingRule.request.json  ChangeRuleAbilityTest.swift  CheckoutCashbackTextTests.swift  ClearFoldersTest.java  CodableUserDefaultTest.swift  Collection+AdditionsTests.swift  CommonCashbackTextTests.swift  CommonGeometryTests.swift  ComposeAttachesRegressTest.java  ComposeAttachesTest.java  ComposeRegressTest.java  ComposeTest.java  ContactCardBundleStorageTests.swift  ContactCardBundleUpdaterTest.swift  ContactCardWKURLSchemeHandlerTest.swift  CoordinatorTest.swift  CreateRuleTest-testCreatingRule.request.json  CreateRuleTest-testCreatingRule.response.json  CreateRuleTest.swift  CurrentDateProviderTest.swift  DataHexStringTests.swift  (+210 more)
mobile/tests/APIServiceTests/: BunkerTests.swift  MedcardTests.swift  PlatformTests.swift  TaxonomyTests.swift
mobile/tests/Backup/: BackupStateSynchronizerTest.swift  CreatePresenterTest.swift  DeleteBackupPresenterTest.swift  InfoPresenterTest.swift  ManageBackupPresenterTest.swift  RestorePresenterTest.swift
mobile/tests/CMS/: CMSPageResultTests.swift
mobile/tests/ChangeLogin/: ChangeLoginLoaderTest-testChangeExclusiveEmailLogin.request.json  ChangeLoginLoaderTest.swift  ChangeLoginPresenterTest.swift
mobile/tests/Checkout/: Dummy.swift
mobile/tests/Common/: AsyncTests.swift  CollectionHelpersTests.swift  ComputedTests.swift  DeferredTests.swift  DelayedActionTests.swift  FetchOperationTests.swift  FunctionalTests.swift  GCDTests.swift  KeyValueStorageTests.swift  NotifierTests.swift  ResultTests.swift  StringToolTests.swift  URLHelpersTests.swift  ValueSetterTests.swift  WeakObjectCollectionTests.swift
mobile/tests/Core/: TestCase.swift  TestLaunchArguments.swift  TestLaunchEnvironmentKeys.swift
mobile/tests/Delete/: DeleteLoaderTest-testDeleteExclusiveEmail.request.json  DeleteLoaderTest.swift  DeletePresenterTest.swift
mobile/tests/DependencyProvider/: DependencyProvider.swift
mobile/tests/Enot/: DeleteEnotPresenterTest.swift  EnotPresenterTests.swift
mobile/tests/Formatter/: CharsFormatterTest.swift  DomainFormatterTest.swift  LoginFormatterTest.swift
mobile/tests/Helpers/: ActionDecodingLoggerStub.swift  AnyActionDecoderImpl+Perform.swift  DocumentServiceLoggerMock.swift  DocumentServiceMock.swift
mobile/tests/Infrastructure/: AsyncResult.swift  NetworkingTestCase.swift  Promise+Expect.swift  StubsTestFunctions.swift  XCTestCase+Bundle.swift
mobile/tests/IoTTests/: ActionTests.swift  AuthStateTests.swift  SecretsValidationTests.swift
mobile/tests/List/: FiltersListTest-testLoadingAndParsingFilters.response.json  FiltersListTest-testLoadingParsingUnknownCases.request.json  FiltersListTest-testLoadingParsingUnknownCases.response.json  FiltersListTest.swift  ListPresenterTest.swift
mobile/tests/MasstransitForecast/: VehiclesForecastTests.swift  VehiclesForecastXMLParserTests.swift  masstransit_forecast_trajectories_1.xml  masstransit_forecast_trajectories_2.xml
mobile/tests/MedicineComponentsTests/: MedicineComponentsTests.swift
mobile/tests/MedicineCoreTests/: FilterStateTests.swift  TelemedDoctorTests.swift
mobile/tests/MedicineLocalizationTests/: MedicineLocalizationTests.swift
mobile/tests/MedicineReduxTests/: MedicineReduxTests.swift
mobile/tests/More/: MorePresenterTest.swift
mobile/tests/POM/: ActivityListViewPage.swift  BarrierViewPage.swift  CartPopupPage.swift  CategoryCarouselPage.swift  CheapestAsGiftViewPage.swift  CollectionViewPage.swift  CompactOfferViewPage.swift  ComparisonListPage.swift  ComparisonPage.swift  ComplaintPopupPage.swift  ConfirmPopupPage.swift  ContextMenuPopupPage.swift  CreditPopupPage.swift  DeliveryProgressPage.swift  DiscountBadgeViewPage.swift  DiscountsUnavailablePopupPage.swift  EntryPoint.swift  ErrorPage.swift  ExpressPage.swift  FeedPage.swift  FeedSnippetPage.swift  GiftPickerViewPage.swift  GiftViewPage.swift  GuestWishlistPopup.swift  HelpIsNearPopupPage.swift  HintPage.swift  HomePlusPage.swift  ImageActionNotificationViewPage.swift  InstallmentsSelectorPopupCellPage.swift  InstallmentsSelectorPopupPage.swift  InstructionsPage.swift  KeyValueViewPage.swift  KeyboardAccessoryPage.swift  KeyboardPage.swift  LoadingPage.swift  MedicineAnalogsOffersPage.swift  MedicineAnalogsTabsPage.swift  NavigationBarPage.swift  OfferInfoNotificationPage.swift  OpinionAgitationPopupPage.swift  (+27 more)
mobile/tests/Promo/: PromoPresenterTest.swift
mobile/tests/Register/: ConfirmationPresenterTest.swift  RegisterLoaderTest-testPaymentRequiredError.failure.json  RegisterLoaderTest-testPaymentRequiredError.request.json  RegisterLoaderTest-testRegisterEmail.request.json  RegisterLoaderTest.swift
mobile/tests/StartScreen/: StartScreenBannerInteractorImplTests.swift
mobile/tests/Status/: DomainStatusLoaderTest-testLoadingExistantExclusiveEmail.request.json  DomainStatusLoaderTest-testLoadingExistantExclusiveEmail.response.json  DomainStatusLoaderTest-testLoadingNonExistantExclusiveEmail.request.json  DomainStatusLoaderTest-testLoadingNonExistantExclusiveEmail.response.json  (+7 more)
(+96068 files in other folders)
