load("//tools:defaults.bzl", "scala_library")

scala_library(
    name = "test-utils",
    srcs = glob(["src/**/*.scala"]),
    visibility = ["//vs-quality:__subpackages__"],
    deps = [
        "//vs-quality/utils/cats_utils:cats-utils",
        "@maven//:co_fs2_fs2_core_2_13",
        "@maven//:com_github_fd4s_fs2_kafka_2_13",
        "@maven//:com_typesafe_akka_akka_actor_2_13",
        "@maven//:io_github_embeddedkafka_embedded_kafka_2_13",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scalacheck_scalacheck_2_13",
        "@maven//:org_scalatestplus_scalacheck_1_15_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_effect_2_13",
        "@maven//:ru_yandex_vertis_mockito_2x_2_13",
        "@maven//:ru_yandex_vertis_vertis_testkit_2_13",
    ],
)
