load("//tools:defaults.bzl", "scala_library")

scala_library(
    name = "testcontainers-zookeeper",
    srcs = glob(["src/**/*.scala"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//common/testcontainers/docker",
    ],
    deps = [
        "@maven//:com_dimafeng_testcontainers_scala_core_2_13",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
